send email whit templates, microservice ready 99%

--- a/templates/html/email_template.html
+++ b/templates/html/email_template.html
@@ -5,6 +5,11 @@
 	<title>Send Email</title>
 </head>
 <body>
-	
+	<h3>Welcome to the platform that will change everything for you</h3>
+	<h4><font color="grey">Are you ready ?</font></h4>
+	<h4><font color="grey">start now, click</font> <a href="https://blojengo.herokuapp.com/">here</a></h4>
+	<p><em><big><font color="grey">{{ .Body }}</font></big></em></p>
+	<h4><font color="grey">Message sent at:{{ .Date }}</font></h4>
+	<footer><font color="red"><em>By isaac</em></font></footer>
 </body>
 </html>
